Removed overflow-y for mini drawer to prevent unexpected elmenet from appearing on large displays.

--- a/Cloud Storage Platform/AngularApplication/CloudStoragePlatformUI/src/app/navigation-drawer/navigation-drawer.component.css
+++ b/Cloud Storage Platform/AngularApplication/CloudStoragePlatformUI/src/app/navigation-drawer/navigation-drawer.component.css
@@ -123,7 +123,6 @@ a {
     height: 100vh;
     position:fixed;
     height: 100vh;
-    overflow-y:scroll;
     /* transform: -100%; */
 }
 
